--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola</h1>
+    <p>Hola, visita mi <a href="{% url 'blog:home' %}">blog aquí</a></p>
 </body>
 </html>
