--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -1,3 +1,7 @@
 este el blog
 <br>
+{% for post in posts %}
+<a href="{% url 'blog:detail' post.id %}">{{post.title}}</a>
+{% endfor %}
+<br>
 <a href="{% url 'blog:create' %}">Create</a>
