--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -2,6 +2,9 @@ este el blog
 <br>
 {% for post in posts %}
 <a href="{% url 'blog:detail' post.id %}">{{post.title}}</a>
+<a href="{% url 'blog:update' post.id %}">Update</a>
+<a href="{% url 'blog:delete' post.id %}">Delete</a>
+<br>
 {% endfor %}
 <br>
 <a href="{% url 'blog:create' %}">Create</a>
