--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -1,10 +1,13 @@
+{% extends 'base.html' %}
+{% block content %}
 este el blog
 <br>
 {% for post in posts %}
 <a href="{% url 'blog:detail' post.id %}">{{post.title}}</a>
-<a href="{% url 'blog:update' post.id %}">Update</a>
-<a href="{% url 'blog:delete' post.id %}">Delete</a>
+<a class="text-blue-500" href="{% url 'blog:update' post.id %}">Update</a>
+<a class="text-blue-500" href="{% url 'blog:delete' post.id %}">Delete</a>
 <br>
 {% endfor %}
 <br>
-<a href="{% url 'blog:create' %}">Create</a>
+<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" href="{% url 'blog:create' %}">Create</a>
+{% endblock content %}
