--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Hola, visita mi <a href="{% url 'blog:home' %}">blog aquí</a></p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}Hola, visita mi <a class="text-blue-500" href="{% url 'blog:home' %}">blog aquí</a>{% endblock content %}
